# auto-suggestion-program

./: .gitignore  README.md  pyproject.toml
src/: auto_suggestion.py  main.py
src/modules/: auto_suggestion.py
